# sylcraft

./: Boss.cpp  Boss.h  BossLabel.cpp  BossLabel.h  BossTexture.cpp  BossTexture.h  BubbleTalk.cpp  BubbleTalk.h  CMakeLists.txt  Carte.cpp  Carte.h  CarteTexture.cpp  CarteTexture.h  Classes.cpp  Classes.h  Decoration.cpp  Decoration.h  DecorationTexture.cpp  DecorationTexture.h  Element.cpp  Element.h  ElementTexture.cpp  ElementTexture.h  Ennemy.cpp  Ennemy.h  EnnemyLabel.cpp  EnnemyLabel.h  EnnemyTexture.cpp  EnnemyTexture.h  Game.cpp  Game.h  HarmingObjects.cpp  HarmingObjects.h  HarmingObjectsTexture.cpp  HarmingObjectsTexture.h  Item.cpp  Item.h  ItemTexture.cpp  ItemTexture.h  Loot.cpp  (+34 more)
NPC/: little_boy.txt  little_girl.txt  mysteriousLady.txt  oldMan.txt  priest.txt  worker_man.txt  worker_woman.txt
boss/: boss_1.txt
cartes/: README.md  carte_1.txt  carte_2.txt  carte_3 (copy).txt  carte_3.txt
classes/: assassin.txt  healer.txt  knight.txt  mage.txt  monk.txt  warrior.txt  wizard.txt
ennemies/: basic_ennemy.txt  basic_ennemy_1.txt  medium_ennemy.txt
game/menu/: menu_1
harming_objects/: fire.txt
items/: README.md  book.txt  candy_1.txt  candy_2.txt  candy_3.txt  candy_4.txt  diamant.txt  scroll.txt
loots/: apple.txt  bag.txt  blueCrystal.txt  greenCrystal.txt  heart.txt  scroll.txt
quests/: README.md  find_book.txt  find_candy_1.txt  find_candy_2.txt  find_candy_3.txt  find_candy_4.txt  find_diamant.txt  find_scroll.txt
