cmake_minimum_required(VERSION 3.12)
project(Project_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Project_1 main.cpp Position.cpp Position.h Element.cpp Element.h Classes.cpp Classes.h Player.cpp Player.h Obstacle.cpp Obstacle.h Item.cpp Item.h Carte.cpp Carte.h PlayerTexture.cpp PlayerTexture.h CarteTexture.cpp CarteTexture.h ObstacleTexture.cpp ObstacleTexture.h Loot.cpp Loot.h LootTexture.cpp LootTexture.h ElementTexture.cpp ElementTexture.h Decoration.cpp Decoration.h DecorationTexture.cpp DecorationTexture.h PlayerStatTexture.cpp PlayerStatTexture.h TextTexture.cpp TextTexture.h HarmingObjects.cpp HarmingObjects.h HarmingObjectsTexture.cpp HarmingObjectsTexture.h Timer.cpp Timer.h NPC.cpp NPC.h NPCTexture.cpp NPCTexture.h BubbleTalk.cpp BubbleTalk.h Ennemy.cpp Ennemy.h EnnemyTexture.cpp EnnemyTexture.h PlayerLabel.cpp PlayerLabel.h EnnemyLabel.cpp EnnemyLabel.h)